Projeto/Compilador/tests/cases/error/T2.pas
program T2;
var
  a: integer;
  a: real;
begin
end.
